--- a/distribution.properties
+++ b/distribution.properties
@@ -2,6 +2,12 @@ src-root-repo=https://github.com/tango-controls
 jtango-root-repo=https://bintray.com/tango-controls/generic/download_file?file_path
 java-root-repo=https://bintray.com/tango-controls/maven/download_file?file_path
 docs-root-repo=https://readthedocs.org/projects/tango-controls/downloads/pdf
+#VERSION_INFO = current:revision:age
+# where
+#current = tango lib major + $age
+#revision = tango lib patch
+#age = tango lib minor
+version-info=12:2:3
 #lib
 cppTango=9.3.2
 JTango=JTango-9.5.11
