set Database version

--- a/distribution.properties
+++ b/distribution.properties
@@ -26,7 +26,7 @@ rest-server-ver=1.2
 #tool_panels=
 #cppserver
 TangoTest=TangoTest-Release-2.1
-TangoDatabase=Ingvord-add-rest-server
+TangoDatabase=DataBase-Release-5.8
 TangoAccessControl=master
 starter=Starter-7.0
 #doc
