--- a/distribution.properties
+++ b/distribution.properties
@@ -2,6 +2,7 @@ src-root-repo=https://github.com/tango-controls
 jtango-root-repo=https://bintray.com/tango-controls/generic/download_file?file_path
 java-root-repo=https://bintray.com/tango-controls/maven/download_file?file_path
 docs-root-repo=https://readthedocs.org/projects/tango-controls/downloads/pdf
+rest-server-root-repo=https://github.com/tango-controls/rest-server/releases
 #VERSION_INFO = current:revision:age
 # where
 #current = tango lib major + $age
@@ -21,10 +22,11 @@ dbbench-ver=1.3
 jssh-terminal-ver=1.11
 log-viewer-ver=2.0.5
 pogo-ver=9.6.16
+rest-server-ver=1.2
 #tool_panels=
 #cppserver
 TangoTest=TangoTest-Release-2.1
-TangoDatabase=DataBase-Release-5.6
+TangoDatabase=DataBase-Release-5.8
 TangoAccessControl=master
 starter=Starter-7.0
 #doc
