Fix broken dependency

--- a/distribution.properties
+++ b/distribution.properties
@@ -30,7 +30,7 @@ TangoDatabase=DataBase-Release-5.8
 TangoAccessControl=master
 starter=Starter-7.0
 #doc
-docs-ver=latest
+docs-ver=9.2.5
 #utils
 tango_admin=Release_1.13
 #mtangorest.server=rc4-2.9
