--- a/assets/lib/java/Makefile.am
+++ b/assets/lib/java/Makefile.am
@@ -23,7 +23,6 @@ bin_SCRIPTS = \
    astor \
    jive \
    pogo \
-   pogo-6 \
    atkpanel \
    logviewer \
    atktuning \
@@ -43,7 +42,7 @@ edit = sed \
 		-e 's|@libdir[@]|$(libdir)|g' \
 		-e 's|@prefix[@]|$(prefix)|g'
      
-#astor jive pogo pogo-6 devicetree atkpanel logviewer atktuning jdraw synopticappli atkmoni cvstag TangoVers tg_devtest: Makefile
+#astor jive pogo devicetree atkpanel logviewer atktuning jdraw synopticappli atkmoni cvstag TangoVers tg_devtest: Makefile
 $(bin_SCRIPTS): Makefile
 	rm -f $@ $@.tmp
 	srcdir=''; \
@@ -58,7 +57,6 @@ $(bin_SCRIPTS): Makefile
 astor: $(srcdir)/astor.in
 jive: $(srcdir)/jive.in
 pogo: $(srcdir)/pogo.in
-pogo-6: $(srcdir)/pogo-6.in
 devicetree: $(srcdir)/devicetree.in
 atkpanel: $(srcdir)/atkpanel.in
 logviewer: $(srcdir)/logviewer.in
@@ -82,7 +80,6 @@ EXTRA_DIST = \
    astor.in \
    jive.in \
    pogo.in \
-   pogo-6.in \
    devicetree.in \
    atkpanel.in \
    logviewer.in \
