--- a/build.xml
+++ b/build.xml
@@ -452,7 +452,9 @@
 
     <target name="package">
         <mkdir dir="${builddir}/package/tango-${cppTango}"/>
-        <copydir src="${builddir}/distr" dest="${builddir}/package/tango-${cppTango}"/>
+        <copy todir="${builddir}/package/tango-${cppTango}">
+          <fileset dir="${builddir}/distr"/>
+        </copy>
         <tar compression="gzip" destfile="${builddir}/tango-${build}.tar.gz">
             <tarfileset dir="${builddir}/package" filemode="755">
                 <include name="tango-${cppTango}/configure"/>
