Remove zmq.hpp (#23)

--- a/assets/lib/cpp/client/Makefile.am
+++ b/assets/lib/cpp/client/Makefile.am
@@ -87,5 +87,4 @@ tangoinclude_HEADERS = accessproxy.h        \
                        devapi_attr.tpp      \
                        devapi_utils.tpp     \
                        api_util.tpp         \
-                       devapi_pipe.tpp      \
-                       zmq.hpp
+                       devapi_pipe.tpp
