--- a/assets/lib/java/atkmoni.in
+++ b/assets/lib/java/atkmoni.in
@@ -20,10 +20,15 @@ APPLI_MAIN_CLASS=Trend; export APPLI_MAIN_CLASS
 CLASSPATH=$TANGO:$TACO:$TANGOATK
 export CLASSPATH
 echo "CLASSPATH=$CLASSPATH"
+LOGBACK=${TANGO_LOGBACK:-@prefix@/share/tango/logback.xml}
 
 #---------------------------------------------------------
 #       Start the atkmoni process
 #---------------------------------------------------------
 #
 
-@JAVA@ -DTANGO_HOST=$TANGO_HOST $APPLI_PACKAGE.$APPLI_MAIN_CLASS $*
+@JAVA@ \
+    -DTANGO_HOST=$TANGO_HOST \
+    -Dlogback.configurationFile="$LOGBACK" \
+    $APPLI_PACKAGE.$APPLI_MAIN_CLASS \
+    "$@"
