--- a/assets/lib/java/TangoRestServer.in
+++ b/assets/lib/java/TangoRestServer.in
@@ -13,6 +13,7 @@ JAVALIB=@prefix@/share/java
 LOG_HOME=/var/tmp/TangoRestServer
 LOG_LEVEL=ERROR
 TANGO_REST_SERVER_JAR=$JAVALIB/RestServer.jar
+LOGBACK=${TANGO_LOGBACK_SERVER:-@prefix@/share/tango/logback-server.xml}
 
 JAVA_OPTS="-Xmx2G -server -Xshare:off -XX:+UseG1GC -XX:+HeapDumpOnOutOfMemoryError -XX:HeapDumpPath=$LOG_HOME/TangoRestServer.hprof -XX:-OmitStackTraceInFastThrow"
 
@@ -25,6 +26,7 @@ shift
     -DTANGO_HOST=$TANGO_HOST \
     -DLOG_HOME=$LOG_HOME \
     -DLOG_LEVEL=$LOG_LEVEL \
+    -Dlogback.configurationFile="$LOGBACK" \
     -jar $TANGO_REST_SERVER_JAR \
     "$INSTANCE" \
     org.tango.TangoRestServer \
