--- a/assets/lib/java/atkpanel.in
+++ b/assets/lib/java/atkpanel.in
@@ -18,9 +18,15 @@ ATKPANEL=$LIB_DIR/ATKPanel.jar
 
 CLASSPATH=$ATKPANEL:$TANGOATK:$TANGO
 export CLASSPATH
+LOGBACK=${TANGO_LOGBACK:-@prefix@/share/tango/logback.xml}
 
 #---------------------------------------------------------
 #	Start the atkpanel process
 #---------------------------------------------------------
 
-@JAVA@ -mx128m -DTANGO_HOST=$TANGO_HOST atkpanel.MainPanel $*
+@JAVA@ \
+    -mx128m \
+    -DTANGO_HOST=$TANGO_HOST \
+    -Dlogback.configurationFile="$LOGBACK" \
+    atkpanel.MainPanel \
+    "$@"
