--- a/assets/lib/java/jdraw.in
+++ b/assets/lib/java/jdraw.in
@@ -20,6 +20,7 @@ APPLI_MAIN_CLASS=JDrawEditorFrame; export APPLI_MAIN_CLASS
 CLASSPATH=$TANGOATK:$TANGO
 export CLASSPATH
 echo "CLASSPATH=$CLASSPATH"
+LOGBACK=${TANGO_LOGBACK:-@prefix@/share/tango/logback.xml}
 
 echo Running Jdraw ...
 
@@ -28,5 +29,7 @@ echo Running Jdraw ...
 #---------------------------------------------------------
 #
 
-@JAVA@ $APPLI_PACKAGE.$APPLI_MAIN_CLASS $@
-
+@JAVA@ \
+    -Dlogback.configurationFile="$LOGBACK" \
+    $APPLI_PACKAGE.$APPLI_MAIN_CLASS \
+    "$@"
