--- a/assets/lib/java/logviewer.in
+++ b/assets/lib/java/logviewer.in
@@ -18,4 +18,10 @@ ATKJAR=$ATKBIN/ATKCore.jar:$ATKBIN/ATKWidget.jar:$ATKBIN/log4j.jar
 CLASSPATH=$JAVALIB/JTango.jar:$TLVBIN/LogViewer.jar:$ATKJAR:.
 export CLASSPATH
 
-@JAVA@ -DTANGO_HOST=$TANGO_HOST $applet_name $*
+LOGBACK=${TANGO_LOGBACK:-@prefix@/share/tango/logback.xml}
+
+@JAVA@ \
+    -DTANGO_HOST=$TANGO_HOST \
+    -Dlogback.configurationFile="$LOGBACK" \
+    $applet_name \
+    "$@"
