--- a/assets/lib/java/tg_devtest.in
+++ b/assets/lib/java/tg_devtest.in
@@ -11,6 +11,12 @@ TANGOATK=$JAVALIB/ATKCore.jar:$JAVALIB/ATKWidget.jar
 CLASSPATH=$JAVALIB/JTango.jar:$JAVALIB/Jive.jar:$TANGOATK
 export CLASSPATH
 
+LOGBACK=${TANGO_LOGBACK:-@prefix@/share/tango/logback.xml}
+
 echo   Starting...
 
-@JAVA@  -DTANGO_HOST=$TANGO_HOST jive.ExecDev $1
+@JAVA@ \
+    -DTANGO_HOST=$TANGO_HOST \
+    -Dlogback.configurationFile="$LOGBACK" \
+    jive.ExecDev \
+    "$1"
