Remove log4tango from tango.pc & makefiles; add dummy liblog4tango.so

--- a/assets/cppserver/database/Makefile.am
+++ b/assets/cppserver/database/Makefile.am
@@ -9,8 +9,8 @@ AM_CPPFLAGS = $(ORB_INCLUDE_PREFIX)  $(LIBZMQ_CFLAGS) \
 
 AM_CXXFLAGS= -Wall -D_FORTIFY_SOURCE=2 -O1 -fPIE
 
-LDADD = -L$(top_builddir)/lib/cpp/client -ltango -L$(top_builddir)/lib/cpp/log4tango/src \
-        -llog4tango $(DB_LDFLAGS) \
+LDADD = -L$(top_builddir)/lib/cpp/client -ltango \
+         $(DB_LDFLAGS) \
          $(DB_LDLIBS) $(ZLIB_LDFLAGS) $(ZLIB_LIBS)  $(LIBZMQ_LIBS)
 
 AM_LDFLAGS = -Wl,-z,now -pie
