--- a/build.xml
+++ b/build.xml
@@ -76,6 +76,13 @@
             <arg value="-B${workdir}/cpp/cmake-build"/>
             <arg value="-DIDL_BASE=${workdir}/idl/install"/>
         </exec>
+        <exec executable="sed" failonerror="true" failifexecutionfails="true">
+            <arg value="-i"/>
+            <arg value="1s/5\.0\.1/5.0.2/;18s/5:1:0/5:2:0/"/>
+            <arg value="${workdir}/cpp/log4tango/configure.in"/>
+        </exec>
+        <exec executable="autoconf" dir="${workdir}/cpp/log4tango" failonerror="true" failifexecutionfails="true">
+        </exec>
     </target>
 
     <target name="-copy-cppTango" depends="-pre-copy-cppTango">
