remove -std option from cmake_tango.opt

--- a/assets/pogo/preferences/cmake_tango.opt.in
+++ b/assets/pogo/preferences/cmake_tango.opt.in
@@ -40,20 +40,9 @@ if(DEFINED ZMQ_HOME)
 endif(DEFINED ZMQ_HOME)
 
 #
-# Compiler and linker flags
+# Compiler flags
 #
-include(CheckCXXCompilerFlag)
-CHECK_CXX_COMPILER_FLAG("-std=c++11" COMPILER_SUPPORTS_CXX11)
-CHECK_CXX_COMPILER_FLAG("-std=c++0x" COMPILER_SUPPORTS_CXX0X)
-if(COMPILER_SUPPORTS_CXX11)
-	set(C++11_FLAGS "-std=c++11")
-elseif(COMPILER_SUPPORTS_CXX0X)
-	set(C++11_FLAGS "-std=c++0x")
-else()
-        message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++11 support.")
-endif()
-
-set(CMAKE_CXX_FLAGS "${CXXFLAGS_USER}  ${CMAKE_CXX_FLAGS} ${C++11_FLAGS}")
+set(CMAKE_CXX_FLAGS "${CXXFLAGS_USER}  ${CMAKE_CXX_FLAGS}")
 
 find_package(PkgConfig REQUIRED)
 pkg_check_modules(PKG_TANGO REQUIRED tango)
