--- a/assets/pogo/preferences/tango.opt.in
+++ b/assets/pogo/preferences/tango.opt.in
@@ -1,21 +1,6 @@
 # vim: set filetype=make:
 
 #------------------------------------------------------------------------------
-#-- gcc version
-#------------------------------------------------------------------------------
-GCC_MAJOR_VERSION_GT4 := $(shell expr `c++ -dumpversion | cut -f1 -d.` \> 4)
-GCC_MAJOR_VERSION_EQ4 := $(shell expr `c++ -dumpversion | cut -f1 -d.` \== 4)
-GCC_MINOR_VERSION_GTEQ3 := $(shell expr `c++ -dumpversion | cut -f2 -d.` \>= 3)
-ifeq ($(GCC_MAJOR_VERSION_GT4),1)
-    CXX11 = -std=c++0x
-else
-    ifeq ($(GCC_MAJOR_VERSION_EQ4),1)
-        ifeq ($(GCC_MINOR_VERSION_GTEQ3),1)
-            CXX11 = -std=c++0x
-        endif
-    endif
-endif
-#------------------------------------------------------------------------------
 #-- TANGO_HOME
 #------------------------------------------------------------------------------
 ifndef TANGO_HOME
@@ -159,7 +144,7 @@ ifdef CXXFLAGS_USR
 	CXXFLAGS_USER = $(CXXFLAGS_USR)
 endif
 
-CXXFLAGS += -D_REENTRANT -W $(INCLUDE_DIRS) $(CXXFLAGS_USER) $(CXX11)  -Dlinux
+CXXFLAGS += -D_REENTRANT -W $(INCLUDE_DIRS) $(CXXFLAGS_USER) -Dlinux
 
 #------------------------------------------------------------------------------
 #-- CFLAGS
