--- a/assets/lib/java/synopticappli.in
+++ b/assets/lib/java/synopticappli.in
@@ -18,7 +18,7 @@ APP_DIR=@prefix@/share/java;	    export APP_DIR
 TANGO=$LIB_DIR/JTango.jar
 
 TANGOATK=$LIB_DIR/ATKCore.jar:$LIB_DIR/ATKWidget.jar
-ATKPANEL=$APP_DIR/atkpanel.jar
+ATKPANEL=$APP_DIR/ATKPanel.jar
 
 APPLI_PACKAGE=fr.esrf.tangoatk.widget.jdraw;	export APPLI_PACKAGE
 APPLI_MAIN_CLASS=SimpleSynopticAppli; export APPLI_MAIN_CLASS
@@ -27,10 +27,16 @@ CLASSPATH=$TACO:$TANGO:$TANGOATK:$ATKPANEL
 export CLASSPATH
 echo "CLASSPATH=$CLASSPATH"
 
+LOGBACK=${TANGO_LOGBACK:-@prefix@/share/tango/logback.xml}
+
 #---------------------------------------------------------
 #       Start the synoptic appli process
 #---------------------------------------------------------
 #
 
-@JAVA@ -mx128m -DTANGO_HOST=$TANGO_HOST $APPLI_PACKAGE.$APPLI_MAIN_CLASS $*
-
+@JAVA@ \
+    -mx128m \
+    -DTANGO_HOST=$TANGO_HOST \
+    -Dlogback.configurationFile="$LOGBACK" \
+    $APPLI_PACKAGE.$APPLI_MAIN_CLASS \
+    "$@"
