--- a/assets/lib/java/astor.in
+++ b/assets/lib/java/astor.in
@@ -55,16 +55,22 @@ JSSHTERM=$LIB_DIR/JSSHTerminal.jar
 DBBENCH=$LIB_DIR/DBBench.jar
 
 ATK_CLASS=$LIB_DIR/ATKCore.jar:$LIB_DIR/ATKWidget.jar
-ATK_CLASS=$ATK_CLASS:$APP_DIR/atkpanel.jar:$APP_DIR/tool_panels.jar
+ATK_CLASS=$ATK_CLASS:$APP_DIR/ATKPanel.jar:$APP_DIR/tool_panels.jar
 export ATK_CLASS
 
 CLASSPATH=$TANGO_CLASS:$ASTOR_CLASS:$JIVE_CLASS:$ATK_CLASS:$LOGVIEWER:$JSSHTERM:$DBBENCH:$LOG4J
 export CLASSPATH
+
+LOGBACK=${TANGO_LOGBACK:-@prefix@/share/tango/logback.xml}
 
 #---------------------------------------------------------
 #	Start the Astor process
 #---------------------------------------------------------
 #
 
-@JAVA@ -mx128m -DTANGO_HOST=$TANGO_HOST admin.astor.Astor $*
-
+@JAVA@ \
+    -mx128m \
+    -DTANGO_HOST=$TANGO_HOST \
+    -Dlogback.configurationFile="$LOGBACK" \
+    admin.astor.Astor \
+    "$@"
