--- a/assets/lib/java/jive.in
+++ b/assets/lib/java/jive.in
@@ -11,12 +11,17 @@ fi
 JAVALIB=@prefix@/share/java;
 JAVABIN=@prefix@/share/java;
 
-ATK=$JAVALIB/ATKCore.jar:$JAVALIB/ATKWidget.jar:$JAVABIN/atkpanel.jar
+ATK=$JAVALIB/ATKCore.jar:$JAVALIB/ATKWidget.jar:$JAVABIN/ATKPanel.jar
 LOGVIEWER=$JAVALIB/LogViewer.jar
 ASTOR=$JAVALIB/Astor.jar:$JAVALIB/tools_panel.jar
 LOG4J=$JAVALIB/log4j.jar
+LOGBACK=${TANGO_LOGBACK:-@prefix@/share/tango/logback.xml}
 
 CLASSPATH=$JAVALIB/JTango.jar:$JAVABIN/Jive.jar:$ATK:$LOGVIEWER:$LOG4J:$ASTOR:.
 export CLASSPATH
 
-@JAVA@ -mx128m -DTANGO_HOST=$TANGO_HOST $applet_name $@
+@JAVA@ \
+    -mx128m \
+    -DTANGO_HOST=$TANGO_HOST \
+    -Dlogback.configurationFile="$LOGBACK" \
+    $applet_name $@
