--- a/build.xml
+++ b/build.xml
@@ -76,6 +76,13 @@
             <arg value="-B${workdir}/cpp/cmake-build"/>
             <arg value="-DIDL_BASE=${workdir}/idl/install"/>
         </exec>
+        <exec executable="sed" failonerror="true" failifexecutionfails="true">
+            <arg value="-i"/>
+            <arg value="1s/5\.0\.1/5.0.2/;18s/5:1:0/5:2:0/"/>
+            <arg value="${workdir}/cpp/log4tango/configure.in"/>
+        </exec>
+        <exec executable="autoconf" dir="${workdir}/cpp/log4tango" failonerror="true" failifexecutionfails="true">
+        </exec>
     </target>
 
     <target name="-copy-cppTango" depends="-pre-copy-cppTango">
@@ -452,7 +459,9 @@
 
     <target name="package">
         <mkdir dir="${builddir}/package/tango-${cppTango}"/>
-        <copydir src="${builddir}/distr" dest="${builddir}/package/tango-${cppTango}"/>
+        <copy todir="${builddir}/package/tango-${cppTango}">
+          <fileset dir="${builddir}/distr"/>
+        </copy>
         <tar compression="gzip" destfile="${builddir}/tango-${build}.tar.gz">
             <tarfileset dir="${builddir}/package" filemode="755">
                 <include name="tango-${cppTango}/configure"/>
