Upgrade TangoDatabase to Release-5.12 (#41)
Release-5.12 includes:
* new migration script from Tango 9.2.5 to Tango 9.3.3,
* renamed migration scripts from Tango 8, 7, 6, and 5.

--- a/assets/configure.ac
+++ b/assets/configure.ac
@@ -485,8 +485,9 @@ AC_OUTPUT(Makefile
 	  cppserver/database/create_db_tables.sql
 	  cppserver/database/update_db.sh
 	  cppserver/database/update_db.sql
-	  cppserver/database/update_db8.sql
-	  cppserver/database/update_db7.sql
+	  cppserver/database/update_db_from_8_to_9.3.3.sql
+	  cppserver/database/update_db_from_7_to_9.3.3.sql
+	  cppserver/database/update_db_from_9.2.5_to_9.3.3.sql
       cppserver/database/rem_history.sql
 	  cppserver/starter/Makefile
   	  cppserver/tangotest/Makefile
