--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,17 @@
 language: java
 
-before_script: sudo apt-get install -y build-essential omniidl libomniorb4-dev libcos4-dev libomnithread3-dev libzmq3-dev libmysqlclient-dev
+before_script:
+  - >
+      sudo apt install -y
+      build-essential
+      omniidl
+      libomniorb4-dev
+      libcos4-dev
+      libomnithread3-dev
+      libzmq3-dev
+      libmysqlclient-dev
+      ant
+
 script:
   - ant build package
 
