--- a/distribution.properties
+++ b/distribution.properties
@@ -1,5 +1,5 @@
 src-root-repo=https://github.com/tango-controls
-jtango-root-repo=https://bintray.com/tango-controls/generic/download_file?file_path
+jtango-root-repo=https://github.com/tango-controls/JTango/releases/download/
 java-root-repo=https://bintray.com/tango-controls/maven/download_file?file_path
 docs-root-repo=https://readthedocs.org/projects/tango-controls/downloads/pdf
 rest-server-root-repo=https://github.com/tango-controls/rest-server/releases
