--- a/distribution.properties
+++ b/distribution.properties
@@ -11,7 +11,7 @@ rest-server-root-repo=https://github.com/tango-controls/rest-server/releases
 version-info=12:3:3
 #lib
 cppTango=9.3.3
-JTango=JTango-9.5.15
+JTango-ver=9.5.17
 tango-idl=5.0.1
 jive-ver=7.22
 atk-ver=9.3.6
