--- a/distribution.properties
+++ b/distribution.properties
@@ -8,9 +8,9 @@ rest-server-root-repo=https://github.com/tango-controls/rest-server/releases
 #current = tango lib major + $age
 #revision = tango lib patch
 #age = tango lib minor
-version-info=12:3:3
+version-info=12:3:4
 #lib
-cppTango=9.3.3
+cppTango=9.3.4-rc1
 JTango-ver=9.5.17
 tango-idl=5.0.1
 jive-ver=7.22
@@ -26,10 +26,10 @@ rest-server-ver=1.14
 #tool_panels=
 #cppserver
 TangoTest=TangoTest-Release-2.1
-TangoDatabase=Database-Release-5.12
+TangoDatabase=Database-Release-5.13
 TangoAccessControl=TangoAccessControl-Release-2.14
 starter=Starter-7.2
 #utils
 tango_admin=Release_1.14
 #mtangorest.server=rc4-2.9
-tango-doc=9.3.3
+tango-doc=9.3.4
