assets/configure.ac: Check for zmq.hpp header
We do require the header for compilation but do currently not check for
it. The code snippet ensures that we get a recent
version with zmq::socket_t::disconnect method. This snipped is copied
from cppTango/6402affe (Use feature tests for checking if we have
zmq::socket::disconnect, 2019-10-23).

Saving and restoring CXXFLAGS allows us to honour a custom zmq-prefix
which makes it possible to have libzmq and cppzmq in different
locations.

So the following now works:

git clone https://github.com/zeromq/libzmq
cd libzmq
mkdir build
cd build
cmake -DCMAKE_INSTALL_PREFIX=$HOME/libzmq -DENABLE_DRAFTS=OFF ..
make
make install

git clone https://github.com/zeromq/cppzmq
cd cppzmq
mkdir build
cd build
export CMAKE_PREFIX_PATH=$HOME/libzmq/share/cmake/ZeroMQ
cmake -DCMAKE_INSTALL_PREFIX=$HOME/cppzmq -DENABLE_DRAFTS=OFF -DCPPZMQ_BUILD_TESTS=OFF ..
make
make install

./configure --with-zmq=$HOME/libzmq CXXFLAGS="-I $HOME/cppzmq/include"
make

--- a/assets/configure.ac
+++ b/assets/configure.ac
@@ -196,6 +196,22 @@ ZMQ_VERSION=`eval pkg-config --modversion libzmq`
 ZMQ_ROOT=`eval pkg-config --variable=prefix libzmq`
 AC_SUBST(ZMQ_PREFIX)
 
+AC_LANG_SAVE
+AC_LANG_CPLUSPLUS
+SAVE_CXXFLAGS="$CXXFLAGS"
+CXXFLAGS="$CXXFLAGS -I $ZMQ_PREFIX/include"
+AC_CHECK_HEADERS(zmq.hpp, [], [AC_MSG_ERROR([Couldn't find a compatible zmq.hpp])],
+[#include <zmq.hpp>
+
+int main(int, char**)
+{
+  zmq::context_t c;
+  zmq::socket_t s(c, ZMQ_REQ);
+  s.disconnect("some endpoint");
+}])
+CXXFLAGS="$SAVE_CXXFLAGS"
+AC_LANG_RESTORE
+
 # We need to define some stuff for threads and stubs
 
 case $build_os in
