assets/lib/cpp/log4tango: Use AM_CPPFLAGS instead of deprecated INCLUDES
From [1]:

INCLUDES

    This does the same job as AM_CPPFLAGS (or any per-target _CPPFLAGS
    variable if it is used). It is an older name for the same
    functionality. This variable is deprecated; we suggest using
    AM_CPPFLAGS and per-target _CPPFLAGS instead.

[1]: https://www.gnu.org/software/automake/manual/html_node/Program-Variables.html

--- a/assets/lib/cpp/log4tango/src/Makefile.am
+++ b/assets/lib/cpp/log4tango/src/Makefile.am
@@ -1,6 +1,6 @@
 noinst_LTLIBRARIES = liblog4tangointernal.la
 
-INCLUDES = -I../include -I$(top_srcdir)/include
+AM_CPPFLAGS = -I../include -I$(top_srcdir)/include
 
 noinst_HEADERS = snprintf.c
 
