assets/configure.ac: Warn on potentially buggy mariadb client version
Reports [1] indicate that versions 2 of the mariadb client package
trigger DatabaseDS crashes when the database connection timeout is reached.

In order to warn users about potential issues we now about a warning
message in this case.

[1]: https://github.com/tango-controls/TangoSourceDistribution/issues/61

The output on a stock debian stretch system looks like

Configuration (tango):

        Source code location:       .
        Version:                    9.3.4-rc1
        Compiler:                   gcc,g++

        OMNIORB PATH:               /usr/local
        OMNIORB VERSION:

        ZMQ PATH:                   /usr
        ZMQ VERSION:                4.2.1

        JAVA PATH:                  /usr/bin/java
        JAVA VERSION:               1.8.0_131

        Database MARIADB
          CLIENT LIB:               -lmariadb
          CLIENT VERSION:           2.3.2 (Warning! potentially buggy version)
          VERSION:                  10.1.41-MariaDB
          CONNECTION:               OK

build:
        libraries:                  yes
        java application:           yes
        access control server:      yes
        database server:            yes
        database schema create:     yes

notice "Warning .." message.

On debian unstable it looks better

Configuration (tango):

        Source code location:       .
        Version:                    9.3.4-rc2
        Compiler:                   gcc,g++

        OMNIORB PATH:               /usr
        OMNIORB VERSION:            "4.2.2"

        ZMQ PATH:                   /usr
        ZMQ VERSION:                4.3.2

        JAVA PATH:                  /usr/bin/java
        JAVA VERSION:               1.8.0_242-ea

        Database MARIADB
          CLIENT LIB:               -lmariadb
          CLIENT VERSION:           3.1.6
          VERSION:                  10.3.21-MariaDB
          CONNECTION:               OK

build:
      

--- a/assets/configure.ac
+++ b/assets/configure.ac
@@ -413,6 +413,14 @@ else
 	if test "x$MARIADB_VERSION" != "xnot_found"; then
 		DB_SERVER_VERSION=${MARIADB_VERSION}
 	fi
+	if test "x$MARIADBCLIENT_VERSION" != "x"; then
+		DB_CLIENT_VERSION=${MARIADBCLIENT_VERSION}
+		MARIADBCLIENT_VERSION_MAJOR=$(echo ${MARIADBCLIENT_VERSION} | cut -f 1 -d ".")
+
+		if test "x$MARIADBCLIENT_VERSION_MAJOR" = "x2"; then
+			DB_CLIENT_VERSION_MSG="(Warning! potentially buggy version)"
+		fi
+	fi
 fi
 
 
@@ -540,7 +548,7 @@ Configuration ($PACKAGE):
 
 	Database ${DB_NAME}
 	  CLIENT LIB:              ${DB_LDFLAGS} ${DB_LDLIBS}
-	  CLIENT VERSION:           ${DB_CLIENT_VERSION}
+	  CLIENT VERSION:           ${DB_CLIENT_VERSION} ${DB_CLIENT_VERSION_MSG}
 	  VERSION:                  ${DB_SERVER_VERSION}
 	  CONNECTION:               ${MYSQL_CONNECTION}
 
