--- a/assets/configure.ac
+++ b/assets/configure.ac
@@ -79,6 +79,11 @@ AM_PROG_AR
 
 AC_PROG_SED
 
+SED_AC_WORKING($SED)
+if test "x$ac_cv_sed" = "xno"; then
+  AC_MSG_ERROR([Your sed is not working, please install GNU sed.])
+fi
+
 # Check gcc release
 
  if test "$CXX" = "c++" -o "$CXX" = "g++"
