--- a/distribution.properties
+++ b/distribution.properties
@@ -10,24 +10,24 @@ rest-server-root-repo=https://github.com/tango-controls/rest-server/releases
 #age = tango lib minor
 version-info=12:4:3
 #lib
-cppTango=9.3.4-rc7
-JTango-ver=9.6.1
+cppTango=9.3.4
+JTango-ver=9.6.6
 tango-idl=5.0.1
-jive-ver=7.23
-atk-ver=9.3.14
-atk-panel-ver=5.8
+jive-ver=7.25
+atk-ver=9.3.19
+atk-panel-ver=5.9
 atk-tuning-ver=4.7
-astor-ver=7.2.10
+astor-ver=7.3.5
 dbbench-ver=1.3
 jssh-terminal-ver=1.16
-log-viewer-ver=2.0.5
+log-viewer-ver=2.1.0
 pogo-ver=9.6.31
 rest-server-ver=1.22
 #tool_panels=
 #cppserver
-TangoTest=TangoTest-Release-2.1
+TangoTest=3.0
 TangoDatabase=Database-Release-5.16
-TangoAccessControl=TangoAccessControl-Release-2.14
+TangoAccessControl=TangoAccessControl-Release-2.15
 starter=Starter-7.3
 #utils
 tango_admin=Release_1.15
